# Autocrop-vertical

./: pyproject.toml
autocrop_vertical/: main.py
